remote/argocd/gha-test-fallback-activation/aws/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dd-gha-test-fallback-activation
  namespace: default
  labels:
    app: dd-gha-test-fallback-activation
    dd.dev/temporary: "true"
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
spec:
  podSelector:
    matchLabels:
      app: dd-gha-test-fallback-activation
  policyTypes:
    - Ingress
    - Egress
  ingress: []
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
    - to:
        - ipBlock:
            cidr: 10.96.0.1/32
      ports:
        - protocol: TCP
          port: 443
    - to:
        - podSelector:
            matchLabels:
              app: dd-gha-clone-server
      ports:
        - protocol: TCP
          port: 8125
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - 0.0.0.0/8
              - 10.0.0.0/8
              - 100.64.0.0/10
              - 127.0.0.0/8
              - 169.254.0.0/16
              - 172.16.0.0/12
              - 192.0.0.0/24
              - 192.0.2.0/24
              - 192.168.0.0/16
              - 198.18.0.0/15
              - 198.51.100.0/24
              - 203.0.113.0/24
              - 224.0.0.0/4
              - 240.0.0.0/4
      ports:
        - protocol: TCP
          port: 443
